--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#progress {
+  animation: grow-progress 1s linear forwards;
+  animation-timeline: scroll( root block );
+}
